Fix portfolio spacing

--- a/src/sections/portfolio/portfolio.css
+++ b/src/sections/portfolio/portfolio.css
@@ -24,7 +24,8 @@
 }
 
 .portfolio-link {
-    margin-top: 3rem;   
+    margin-top: 3rem; 
+    margin-bottom: 0;  
 }
 
 .portfolio-link a {
